# file_search_FastAPI_endpoint

./: README.md  pyproject.toml
src/: app.py  gemini_rag_service.py  prompt.py
